--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                         <h2>About Boujee Nails & Spa</h2>
                         <span>Welcome to Boujee Nails And Spa where we strive to give you the most sanitary and best nail care and spa services available. Boujee Nails And Spa is one of the best nail salons in Martin Ferry, OH. We specialize in innovatively designed manicures from the most sought-after nail artists in addition to a standard nail salon menu using the finest nail lacquers. <br><br>
 
-Here at Boujee Nails And Spa you can escape into a world of total comfort, relaxation, and rejuvenation. Treat yourself to a luxurious experience...you deserve it! Our Organic Rejuvenate Pedicure will make your stress fade away into a distant memory. Our friendly, professional staff will pamper you, renewing your mind, body, and soul.
+Here at Boujee Nails And Spa you can escape into a world of total comfort, relaxation, and rejuvenation. Treat yourself to a luxurious experience...you deserve it! Our service Rejuvenate Pedicure will make your stress fade away into a distant memory. Our friendly, professional staff will pamper you, renewing your mind, body, and soul.
                         </span>
                         <div class="main-border-button">
                             <a class="booking-now-border" target="_blank" href="https://www.lldtek.com/salon/appt/MzY5ODd8Ym91amVlMzAxc3xPSF8wNzMzMnw3N2VmNmU1NjBlMTg2ZDcyYWQxNWE0YTlhYjJlODE2OA==">Booking Now</a>
