--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                                 <h4 class="text-dark-gold">Services</h4>
                                                 <p>We Have Many Services</p>
                                                 <div class="main-border-button">
-                                                    <a href="service.html">View More</a>
+                                                    <a href="#women">View More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -428,7 +428,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 mt-3 mt-md-0 mb-md-5">
-                        <div class="title-small">Lava Pedicure - <b class="color-bold">$60</b></div>
+                        <div class="title-small">Lava Pedicure - <b class="color-bold">$55</b></div>
                         <div class="description">
                             <p>Hot Stone Massage</p>
                             <p>Relax your feet into a bubbling & fizzing!!
@@ -436,7 +436,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 mt-3 mt-md-0 mb-md-5">
-                        <div class="title-small">Paradise Pedicure - <b class="color-bold">$70</b></div>
+                        <div class="title-small">Paradise Pedicure - <b class="color-bold">$65</b></div>
                         <div class="description">
                             <p>Wine, Hot Stone Massage, Collagen Sock</p>
                             <p>A luxurious treat for your feet!
@@ -444,7 +444,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 mt-3 mt-md-0 mb-md-5">
-                        <div class="title-small">The Boujee Pedicure - <b class="color-bold">$90</b></div>
+                        <div class="title-small">The Boujee Pedicure - <b class="color-bold">$85</b></div>
                         <div class="description">
                             <p>Wine, Hot Stone Massage, Paraffin Wax, Collagen Glove</p>
                             <p>Begins with a bath filled with fluffy "Jelly" surrounds the lower legs and feet to start this process. We start working on your feet & legs with 24 Karat Gold pedicure to revitalize, dextoxifying, boosts circulation and skin elasticity, fesh nourishing and hydrating. Hot stone massage, paraffin wax, and collagen glove for your hand. This is gonna be the best experiment you've ever had!</p>
